--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "msgpack-lite": "^0.1.26"
   },
   "types": "./index.d.ts"
